--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,8 +21,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.4.0",
+    "jest": "^30.1.3",
     "nodemon": "^3.1.10",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
